# Rag-simples-Firecrawl

./: .gitignore  pyproject.toml
docstoteles/: app.py
docstoteles/presentation/: chat.py  scraping.py
docstoteles/service/: rag.py  scraping.py
